# neo4j-langraph

./: .env.example  AGENTS.md  COMO_CONFIGURAR_GOOGLE_API_KEY.md  EMBEDDINGS.md  ESTRATEGIA_EMBEDDINGS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  LITELLM_GUIDE.md  ONDE_VISUALIZAR.md  README.md  STRUCTURE.md  TROUBLESHOOTING_K3S.md  check_status.sh  cleanup_k3s_old_resources.sh  deploy.sh  download_embeddings_model.py  download_llm_model.py  download_llm_model_alt.py  download_models.sh  knownledge.md  litellm_config.yaml  logs.sh  mandatos.md  objetivo.md  objetivo_generalista.md  objetivo_projetos.md  port-forward.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_github_secrets.sh  setup_hf_gpu.sh  setup_uv.sh  start_litellm.sh  test_gemini_embeddings.py  test_litellm.py  test_litellm_auth.py  test_llm.py  test_llm_embeddings.py  (+3 more)
.github/workflows/: backup.yml  deploy-dev.yml  deploy.yml  test.yml
k8s/localai/: localai-deployment-fixed.yaml  localai-deployment.yaml
k8s/neo4j/: neo4j-deployment-4.4.yaml  neo4j-deployment-5.23.yaml  neo4j-deployment-basic.yaml  neo4j-deployment-final.yaml  neo4j-deployment-fixed.yaml  neo4j-deployment-memory-fixed.yaml  neo4j-deployment-minimal.yaml  neo4j-deployment-no-pvc.yaml  neo4j-deployment-simplified.yaml  neo4j-deployment-strict-validation-disabled.yaml  neo4j-deployment.yaml  (+1 more)
scripts/: README.md  backup_with_kubectl_ai.sh  deploy_with_kubectl_ai.sh  diagnose_and_recover_with_kubectl_ai.sh  monitor_with_kubectl_ai.sh  setup_k3s.sh  setup_k3s_with_kubectl_ai.sh  setup_runner.sh
src/: __init__.py  config.py
(+17 files in other folders)
